--- a/config.env
+++ b/config.env
@@ -15,3 +15,5 @@ cel_number=68041538
 continent="South America"
 location="Pasaje Mecapaca, Avenida Sucre"
 zone="Ballivian 2 sec"
+house="Two cameras. Orange. Garage color green."
+
